--- a/config/database.yml
+++ b/config/database.yml
@@ -9,12 +9,12 @@ default: &default
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
 
-development:
+development: 
   <<: *default
   database: db/development.sqlite3
-
+ 
 # Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
+# re-generated from your developme     database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
